[skipCI] add unit tests

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -8,6 +8,7 @@ on:
     types: [opened, synchronize, reopened]
 jobs:
   build:
+    if: "!contains(github.event.commits[0].message, '[skipCI]')"
     name: Analysis
     runs-on: ubuntu-latest
     steps:
