--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>5.8.1</version>
+            <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -284,9 +284,9 @@
                         <phase>install</phase>
                         <configuration>
                             <source>${jdk.version}</source>
-                            <failOnError>false</failOnError>
-                            <failOnWarnings>false</failOnWarnings>
-                            <detectOfflineLinks>false</detectOfflineLinks>
+                            <failOnError>true</failOnError>
+                            <failOnWarnings>true</failOnWarnings>
+                            <doclint>missing,accessibility,reference</doclint>
                         </configuration>
                     </execution>
                 </executions>
